--- a/src/main/resources/public/createAccount.html
+++ b/src/main/resources/public/createAccount.html
@@ -6,6 +6,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.f720ea16f52210f30a88.css"></head>
 <body>
   <app-root></app-root>
